--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           
           <div class="countdown">00<span>小时 </span>49<span>分 </span>53<span>秒</span></div>
           <br/>
-          <br/>
-          <br/>
-          <br/>
-          <br/>
+          <div class="title">公告</div>
+          <p align="center" class="公告">公告</p>
+          <div class="title">——</div>
+
           
           </div>
         </main>
