--- a/down.html
+++ b/down.html
@@ -11,7 +11,8 @@
 	<p class="bload" align="center">⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀---课件下载---⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</p>
 	<p class="downbox" align="center">直接点击文件名下载即可，如果下载不了联系我。谢谢~<p>
 	</header>
-
+	<a href="File/政治必修一第一课背诵要点.doc"  class="重要">政治第一课知识点(语文)(doc)(9.17)(重要)<a><br/>
+		<br/>
 	<a href="File/种子+作文.doc"  class="临时">语文周末作文题目(语文)(doc)(9.15)(临时)<a><br/>
 	<a href="File/历史第二课.pptx"  class="downbox">历史第二课(历史)(pptx)(9.15)<a><br/>
 	<a href="File/归园田居.pptx"  class="downbox">归园田居课件(语文)(pptx)(9.15)<a><br/>
