--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
         <main>
           <!-- 顶部logo -->
           <!-- 主体内容 -->
-          <div class="msg">2024年高考倒计时: <font color="#FF0000"><span id="day">994</span></font>天</div>
+          <div class="msg">2026年高考倒计时: <font color="#FF0000"><span id="day">994</span></font>天</div>
           
           <div class="countdown">00<span>小时 </span>49<span>分 </span>53<span>秒</span></div>
           <br/>
           <div class="title">公告</div>
           <p align="center" class="公告">公告</p>
+          <p align="center" class="公告">好好学习，天天向上</p>
           <div class="title">——</div>
 
           
