--- a/down.html
+++ b/down.html
@@ -11,6 +11,9 @@
 	<p class="bload" align="center">⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀---课件下载---⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</p>
 	<p class="downbox" align="center">直接点击文件名下载即可，如果下载不了联系我。谢谢~<p>
 	</header>
+	<a href="File/9.18+2023级高一英语答案.pptx"  class="临时">英语答案(英语)(doc)(9.18)(临时)<a><br/>
+	<a href="File/第3课+秦统一多民族封建国家的建立.pptx"  class="downbox">历史第三课(历史)(pptx)(9.18)<a><br/>
+	<a href="File/离子反应(1).ppt"  class="downbox">化学（离子反应）(化学)(doc)(9.18)<a><br/>
 	<a href="File/政治必修一第一课背诵要点.doc"  class="重要">政治第一课知识点(政治)(doc)(9.17)(重要)<a><br/>
 		<br/>
 	<a href="File/种子+作文.doc"  class="临时">语文周末作文题目(语文)(doc)(9.15)(临时)<a><br/>
